--- a/src/index.css
+++ b/src/index.css
@@ -50,3 +50,20 @@ main {
   flex-direction: column;
   max-width: 100vw;
 }
+
+::-webkit-scrollbar {
+  width: 3px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+  margin: 200px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #ffffffab;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
