--- a/src/pages/CustomPage/customise.scss
+++ b/src/pages/CustomPage/customise.scss
@@ -46,12 +46,10 @@
 
       .canvas-container {
         position: absolute !important;
-
         top: 125px;
         left: 50%;
         transform: translateX(-50%);
       }
-
       img {
         width: 100%;
         height: 100%;
@@ -72,6 +70,27 @@
 
   background-color: rgba(0, 0, 0, 0.5);
   animation: slideIn 0.5s forwards;
+}
+.designs {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+
+  .design {
+    overflow: hidden;
+
+    img {
+      border-radius: 5px;
+      width: 80px;
+      height: 90px;
+      object-fit: cover;
+    }
+
+    h4 {
+      text-transform: capitalize;
+      margin: 0;
+    }
+  }
 }
 
 @media (max-width: 768px) {
