--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@ footer {
 main {
   min-height: calc(100vh - var(--header-height) - var(--footer-height));
   display: flex;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
   flex-direction: column;
   max-width: 100vw;
