--- a/src/pages/DealsPage/styles.scss
+++ b/src/pages/DealsPage/styles.scss
@@ -37,3 +37,12 @@
   margin-bottom: 0.5rem;
   display: block;
 }
+
+.deals-card-regular-price {
+  color: #bbb;
+  font-size: 0.95em;
+  margin-left: 0.5em;
+  text-decoration: line-through;
+  opacity: 0.7;
+  font-weight: 400;
+}
